--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             Copyright &copy; by Tijani Habeeb. Lorem ipsum dolor sit amet
             consectetur adipisicing elit. Cupiditate vel tempore temporibus,
             quia nam eaque eum alias porro dolorem necessitatibus, aperiam modi
-            quaerat est numquam fugiat quod perferendis quam ipsam!
+            quaerat est numquam fugiat quod perferendis quam ipsamm!
           </p>
         </div>
       </div>
